--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
               class="icon"
             />
           </a>
-          <a target="_blank" href="https://instagram.com/" rel="noopener">
+          <a
+            target="_blank"
+            href="https://www.instagram.com/biplavvv_/"
+            rel="noopener"
+          >
             <img
               decoding="async"
               src="img/instagram.svg"
