--- a/index.html
+++ b/index.html
@@ -13,95 +13,158 @@
     />
   </head>
   <body>
-    <!-- Navigation Bar -->
-    <nav class="nav-bar">
-      <div class="nav-logo">Biplav Ghale</div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <div
+      class="absolute top-0 z-[-2] h-screen w-screen bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"
+    >
+      <!-- Navigation Bar -->
+      <nav class="nav-bar">
+        <div class="nav-logo">Biplav's Portfolio</div>
+        <ul class="nav-links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
 
-    <!-- Home Section -->
-    <!-- <section id="home">
+      <!-- Home Section -->
+      <!-- <section id="home">
       <h1>Welcome to my Portfolio!</h1>
       <p>This is a brief introduction to who I am and what I do.</p>
       <button>Learn More</button>
       
     </section> -->
 
-    <section id="profile">
-      <div class="section__pic-container">
-        <img
-          decoding="async"
-          id="profile1"
-          src="img/person-holding-glass.svg"
-          title="Biplav"
-        />
-      </div>
-      <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Biplav Ghale</h1>
-        <p class="section__text__p2">Software Developer</p>
-        <div class="btn-container">
-          <a
-            href="https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf"
-            target="_blank"
-            rel="noopener"
-          >
-            <button class="btn btn-color-2">See Resume</button>
-          </a>
-          <button class="btn btn-color-1">Contact Info</button>
+      <section id="profile">
+        <div class="section__pic-container">
+          <img
+            decoding="async"
+            id="profile1"
+            src="img/person-holding-glass.svg"
+            title="Biplav"
+          />
         </div>
-        <div id="socials-container">
-          <a target="_blank" href="https://www.linkedin.com/" rel="noopener">
-            <img
-              decoding="async"
-              src="img/linkedin.svg"
-              alt="My LinkedIn profile"
-              class="icon"
-            />
-          </a>
+        <div class="section__text">
+          <p class="section__text__p1">Hello, I'm</p>
+          <h1 class="title">Biplav Ghale</h1>
+          <p class="section__text__p2">Software Developer</p>
+          <div class="btn-container">
+            <a
+              href="https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf"
+              target="_blank"
+              rel="noopener"
+            >
+              <button class="btn btn-color-2">See Resume</button>
+            </a>
+            <button class="btn btn-color-1">Contact Info</button>
+          </div>
+          <div id="socials-container">
+            <a target="_blank" href="https://www.linkedin.com/" rel="noopener">
+              <img
+                decoding="async"
+                src="img/linkedin.svg"
+                alt="My LinkedIn profile"
+                class="icon"
+              />
+            </a>
 
-          <a target="_blank" href="https://github.com/" rel="noopener">
-            <img
-              decoding="async"
-              src="img/github.svg"
-              alt="My Github profile"
-              class="icon"
-            />
-          </a>
-          <a target="_blank" href="https://facebook.com/" rel="noopener">
-            <img
-              decoding="async"
-              src="img/facebook.svg"
-              alt="My facebook profile"
-              class="icon"
-            />
-          </a>
-          <a
-            target="_blank"
-            href="https://www.instagram.com/biplavvv_/"
-            rel="noopener"
-          >
-            <img
-              decoding="async"
-              src="img/instagram.svg"
-              alt="My instagram profile"
-              class="icon"
-            />
-          </a>
+            <a target="_blank" href="https://github.com/" rel="noopener">
+              <img
+                decoding="async"
+                src="img/github.svg"
+                alt="My Github profile"
+                class="icon"
+              />
+            </a>
+            <a target="_blank" href="https://facebook.com/" rel="noopener">
+              <img
+                decoding="async"
+                src="img/facebook.svg"
+                alt="My facebook profile"
+                class="icon"
+              />
+            </a>
+            <a
+              target="_blank"
+              href="https://www.instagram.com/biplavvv_/"
+              rel="noopener"
+            >
+              <img
+                decoding="async"
+                src="img/instagram.svg"
+                alt="My instagram profile"
+                class="icon"
+              />
+            </a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Footer -->
-    <footer>
-      <p>&copy; Portfolio Website</p>
-    </footer>
+      <section id="about-me">
+        <div id="about">
+          <h1>About me</h1>
+        </div>
+        <div class="profileNdesc">
+          <div class="about-img">
+            <img src="img/profile.JPG" alt="" />
+          </div>
+          <div class="about-desc">
+            I am a dedicated and enthusiastic aspiring full stack developer with
+            a passion for creating efficient and user-friendly web applications.
+            Although I am just beginning my journey, I am eager to learn and
+            have been exploring various technologies, including React,
+            Express.js, Node.js, MongoDB,C,C++,Python, and MongoDB. My curiosity
+            for how things work drives me to continuously learn and adapt to new
+            challenges. I thrive in collaborative environments and enjoy solving
+            complex problems to deliver high-quality solutions. Outside of
+            coding, I enjoy staying active, exploring new technologies, and
+            contributing to open-source projects.
+          </div>
+        </div>
+      </section>
 
-    <script src="script.js"></script>
+      <section id="skills">
+        <div id="myskills">
+          <h1>Myskills</h1>
+        </div>
+
+        <div class="skill-items">
+          <div class="item another">
+            <img src="img/html-5.png" alt="" />
+          </div>
+
+          <div class="item">
+            <img src="img/css-3.png" alt="" />
+          </div>
+
+          <div class="item">
+            <img src="img/programing.png" alt="" />
+          </div>
+
+          <div class="item">
+            <img src="img/python.png" alt="" />
+          </div>
+
+          <div class="item">
+            <img src="img/sql-server.png" alt="" />
+          </div>
+
+          <div class="item">
+            <img src="img/php.png" alt="" />
+          </div>
+
+          <div class="item">
+            <img src="img/express.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer>
+        <p>&copy; Portfolio Website</p>
+      </footer>
+
+      <script src="script.js"></script>
+    </div>
   </body>
 </html>
